# pimc

./: CMakeLists.txt  README.md  Untitled.ipynb  animation.ipynb  copythisforfourierplots.txt  job-parallel  job-serial  pimcparallel-gebmpi.cpp  pimcparallel-jack.cpp  pimcparallel.cpp  pimcserial.cpp  plot_worldlines.ipynb  plot_worldlines_sbs.ipynb  worldlines.txt
